feat: Add arriveBy-param on trips endpoint (#114)
